# Kazakh-text-detection

./: CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp.save  Makefile  README  README.md  cmake_install.cmake  eng_text.txt  kaz_text.txt  proj.cpp  tr.py
